--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  supabase_flutter: ^2.0.0
+  logger: ^2.5.0
+  intl: ^0.20.2
+  file_picker: ^8.3.1
+  flutter_bloc: ^9.0.0
+  bloc: ^9.0.0
+  meta: ^1.15.0
 
 dev_dependencies:
   flutter_test:
